tests/fail/namespace-obj3.dit
A {}
B {}

A a;
B b;

a = b;